--- a/.github/workflows/schedule.yml
+++ b/.github/workflows/schedule.yml
@@ -3,6 +3,7 @@ name: Daily Email Summary
 on:
   schedule:
     - cron: "59 23 * * *"  # Runs at 11:59 PM every day
+  workflow_dispatch:       # Allows manual triggering for testing
 
 jobs:
   run-script:
@@ -15,12 +16,12 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@v2
         with:
-          python-version: '3.x'  # Use the Python version your script requires
+          python-version: '3.12'  # Using Python 3.12 as per your environment
 
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install -r requirements.txt  # Ensure you have a requirements.txt for your dependencies
+          pip install -r requirements.txt  # Make sure your dependencies are listed in requirements.txt
 
       - name: Run Email Summary Script
         run: python email_summary.py
