--- a/.github/workflows/schedule.yml
+++ b/.github/workflows/schedule.yml
@@ -16,12 +16,12 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@v2
         with:
-          python-version: '3.12'  # Using Python 3.12 as per your environment
+          python-version: '3.12'  # Use the Python version you're using locally (3.12.5)
 
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install -r requirements.txt  # Make sure your dependencies are listed in requirements.txt
+          pip install -r requirements.txt
 
       - name: Run Email Summary Script
         run: python email_summary.py
